(feat): Add top header

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,13 +29,29 @@
     <title>Jade Quinn Design {% block extra_title %}{% endblock %}</title>
 </head>
 <body>
-    <header class="container-fluid fixed-top"></header>
+    <header class="container-fluid fixed-top">
+        <div class="row">
+            <div class="col-12 col-lg-4 text-center">
+                <a href="{% url 'home' %}" class="nav-link">Jade Quinn Design</a>
+            </div>
+            <div class="col-12 col-lg-4">
+
+            </div>
+            <div class="col-12 col-lg-4">
+                <ul class="list-inline list-unstyled">
+                    <li class="list-inline-item dropdown"></li>
+                    <li class="list-inline-item"></li>
+                </ul>
+            </div>
+        </div>
+    </header>
 
     {% if messages %}
-    <div class="message-container"></div>
+        <div class="message-container"></div>
     {% endif %}
 
     {% block page_header %}
+
     {% endblock %}
 
     {% block content %}
