--- a/templates/base.html
+++ b/templates/base.html
@@ -31,12 +31,29 @@
 <body>
     <header class="container-fluid fixed-top">
         <div class="row">
+
+            <!-- logo -->
             <div class="col-12 col-lg-4 text-center">
                 <a href="{% url 'home' %}" class="nav-link">Jade Quinn Design</a>
             </div>
-            <div class="col-12 col-lg-4">
 
+            <!-- form -->
+            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
+                <form method="GET" action="">
+                    <div class="input-group w-100">
+                        <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
+                        <div class="input-group-append">
+                            <button class="form-control btn btn-black border border-black rounded-0" type="submit">
+                                <span class="icon">
+                                    <i class="fas fa-search"></i>
+                                </span>
+                            </button>
+                        </div>
+                    </div>
+                </form>
             </div>
+
+            <!-- dropdown -->
             <div class="col-12 col-lg-4">
                 <ul class="list-inline list-unstyled">
                     <li class="list-inline-item dropdown"></li>
