(feat): Add individual products details

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -16,7 +16,7 @@
                 <h1>The new collections</h1>
                 <div class="my-5">
                     <h4>
-                        <a href="" class="shop-now-button">Shop now</a>
+                        <a href="{% url 'products' %}" class="shop-now-button">Shop now</a>
                     </h4>
                 </div>
             </div>
